--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<header>
-		<img src="images/logo.png" alt="Rollend Xavier's logo">
+		<img src="images/logo.png" alt="Rollend Xavier's logo" width="100" height="100">
 		<h1>Rollend Xavier</h1>
 		<nav>
 			<ul>
