--- a/index.html
+++ b/index.html
@@ -3,87 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Rollend Xavier - Senior Consultant</title>
-    <style>
-      body {
-        background-color: #F5F5F5;
-        font-family: Arial, sans-serif;
-      }
-
-      #container {
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 20px;
-        background-color: #FFFFFF;
-        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-      }
-
-      h1 {
-        font-size: 36px;
-        color: #0077B5;
-        text-align: center;
-        margin-top: 0;
-      }
-
-      h2 {
-        font-size: 24px;
-        color: #333333;
-        margin-top: 30px;
-      }
-
-      p {
-        font-size: 18px;
-        color: #333333;
-        line-height: 1.5;
-        margin-top: 10px;
-      }
-
-      img {
-        display: block;
-        margin: 0 auto;
-        margin-top: 30px;
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        border: 2px solid #0077B5;
-      }
-
-      .social-links {
-        display: flex;
-        justify-content: center;
-        margin-top: 30px;
-      }
-
-      .social-links a {
-        display: inline-block;
-        width: 40px;
-        height: 40px;
-        margin: 0 10px;
-        border-radius: 50%;
-        background-color: #0077B5;
-        text-align: center;
-        line-height: 40px;
-        color: #FFFFFF;
-        font-size: 20px;
-        transition: all 0.2s;
-      }
-
-      .social-links a:hover {
-        background-color: #005D8E;
-        transform: scale(1.2);
-      }
-
-      ul {
-        margin-top: 30px;
-      }
-
-      li {
-        font-size: 18px;
-        color: #333333;
-        line-height: 1.5;
-        margin-top: 10px;
-      }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
 <body>
 	<header>
