--- a/index.html
+++ b/index.html
@@ -1,54 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>Rollend Xavier - Senior Consultant</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rollend Xavier</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-<body>
-	<header>
-		<img src="images/logo.png" alt="Rollend Xavier's logo" width="100" height="100">
-		<h1>Rollend Xavier</h1>
-		<nav>
-			<ul>
-				<li><a href="#about">About</a></li>
-				<li><a href="#articles">Articles</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-
-	<main>
-		<section id="about">
-			<h2>About Me</h2>
-			<p>I'm a Senior Consultant at Insight working in the Apps & Infrastructure Team! I got exposure to Architecture, and design, and worked on various aspects of APIs, Authentication, DevOps, Site reliability engineering, etc. My focus is on Cloud Technology, Architecture, DevOps, Azure, ML & AI and I'm based in Perth, Australia.</p>
-			<p><a href="https://www.linkedin.com/in/rollendxavier">Visit my LinkedIn profile</a></p>
-			<p><a href="https://rollendxavier.medium.com/">Visit my Medium profile</a></p>
-		</section>
-
-		<section id="articles">
-			<h2>My Articles</h2>
-			<ul>
-				<li><a href="https://levelup.gitconnected.com/unlock-the-power-of-terraform-the-ultimate-beginners-guide-to-unit-testing-567db37da318">Unlock the Power of Terraform: The Ultimate Beginner’s Guide to Unit Testing</a></li>
-				<li><a href="https://rollendxavier.medium.com/demystifying-software-architecture-on-azure-aws-10-services-explained-in-detail-with-realworld-be634fa96c09">Demystifying Software Architecture on Azure & AWS: 10 Services Explained in Detail with RealWorld Examples</a></li>
-				<li><a href="https://levelup.gitconnected.com/building-a-language-translation-system-using-azure-and-terraform-f9d33a28069">Building a Language Translation System Using Azure and Terraform</a></li>
-				<li><a href="https://levelup.gitconnected.com/clean-architecture-net-b79fb5f2e17d">Clean Architecture .NET</a></li>
-				<li><a href="https://levelup.gitconnected.com/deploy-azure-function-with-azure-devops-bicep-6493ba063b1c">Deploy Azure function with Azure DevOps & Bicep</a></li>
-				<li><a href="https://levelup.gitconnected.com/machine-learning-with-ml-net-python-2bbdd7b15874">Machine Learning with ML.Net & Python</a></li>
-				<li><a href="https://levelup.gitconnected.com/azure-api-management-with-terraform-7903f0f8fe45">Azure API management with Terraform</a></li>
-				<li><a href="https://levelup.gitconnected.com/azure-application-gateway-with-terraform-e4fecf8dd416">Azure Application Gateway with terraform</a></li>
-				<li><a href="https://levelup.gitconnected.com/aws-cdk-deploy-rest-apis-with-lambda-authorizers-in-typescript-1f0f0c1d5a75">AWS CDK: Deploying REST APIs with Lambda Authorizers in Typescript</a></li>
-				<li><a href="https://levelup.gitconnected.com/use-variables-inside-azure-devops-pipelines-a9f7f1c4e137">Use variables inside Azure DevOps Pipelines</a></li>
-				<li><a href="https://rollendxavier.medium.com/">Click here for more...</a></li>
-			</ul>
-		</section>
-
-		<section id="contact">
-			<h2>Contact Me</h2>
-			<p>Email: rollendxavier@email.com</p>
-			<p>Phone: +61 405 338 129</p>
-			<p>Address: CBD Perth, Australia</p>
-		</section>
-	</main>
-</body>
+  <body>
+    <div class="header">
+      <img src="images/logo.png" alt="Logo" class="logo" />
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="content">
+      <section id="about">
+        <h1>About Me</h1>
+        <p>
+          I'm a Senior Consultant at Insight working in the Apps & Infrastructure
+          Team! I got exposure to Architecture, and design, and worked on various
+          aspects of APIs, Authentication, DevOps, Site reliability engineering,
+          etc. My focus is on Cloud Technology, Architecture, DevOps, Azure, ML &
+          AI and I'm based in Perth, Australia.
+        </p>
+      </section>
+      <section id="projects">
+        <h1>Projects</h1>
+	<ul>
+		<li><a href="https://levelup.gitconnected.com/unlock-the-power-of-terraform-the-ultimate-beginners-guide-to-unit-testing-567db37da318">Unlock the Power of Terraform: The Ultimate Beginner’s Guide to Unit Testing</a></li>
+		<li><a href="https://rollendxavier.medium.com/demystifying-software-architecture-on-azure-aws-10-services-explained-in-detail-with-realworld-be634fa96c09">Demystifying Software Architecture on Azure & AWS: 10 Services Explained in Detail with RealWorld Examples</a></li>
+		<li><a href="https://levelup.gitconnected.com/building-a-language-translation-system-using-azure-and-terraform-f9d33a28069">Building a Language Translation System Using Azure and Terraform</a></li>
+		<li><a href="https://levelup.gitconnected.com/clean-architecture-net-b79fb5f2e17d">Clean Architecture .NET</a></li>
+		<li><a href="https://levelup.gitconnected.com/deploy-azure-function-with-azure-devops-bicep-6493ba063b1c">Deploy Azure function with Azure DevOps & Bicep</a></li>
+		<li><a href="https://levelup.gitconnected.com/machine-learning-with-ml-net-python-2bbdd7b15874">Machine Learning with ML.Net & Python</a></li>
+		<li><a href="https://levelup.gitconnected.com/azure-api-management-with-terraform-7903f0f8fe45">Azure API management with Terraform</a></li>
+		<li><a href="https://levelup.gitconnected.com/azure-application-gateway-with-terraform-e4fecf8dd416">Azure Application Gateway with terraform</a></li>
+		<li><a href="https://levelup.gitconnected.com/aws-cdk-deploy-rest-apis-with-lambda-authorizers-in-typescript-1f0f0c1d5a75">AWS CDK: Deploying REST APIs with Lambda Authorizers in Typescript</a></li>
+		<li><a href="https://levelup.gitconnected.com/use-variables-inside-azure-devops-pipelines-a9f7f1c4e137">Use variables inside Azure DevOps Pipelines</a></li>
+		<li><a href="https://rollendxavier.medium.com/">Click here for more...</a></li>
+	</ul>
+      </section>
+      <section id="contact">
+        <h1>Contact Me</h1>
+        <form action="#" method="post">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" required></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </section>
+    </div>
+    <footer>
+      <ul class="social-links">
+        <li><a href="https://www.linkedin.com/in/rollendxavier"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="https://rollendxavier.medium.com/"><i class="fab fa-medium"></i></a></li>
+      </ul>
+      <p>&copy; 2023 Rollend Xavier. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
