--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<header>
 		<h1>Rollend Xavier</h1>
 		<h2>Senior Consultant at Insight</h2>
+		<img src="images/logo.png" alt="Rollend Xavier" class="profile-image">
 	</header>
 	<main>
 		<section>
@@ -33,3 +34,4 @@
 		<p>&copy; 2023 Rollend Xavier</p>
 	</footer>
 </body>
+</html>
